--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
 <div><img alt="Catalin Hritcu's Photo" id="photo" src="images/catalin_hritcu_2013.jpg" title="Catalin Hritcu" /></div>
 
 <h1>C&#259;t&#259;lin Hri&#355;cu</h1>
@@ -408,6 +409,12 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   ga('send', 'pageview');
 
 </script>
+
+<!--[if !(lt IE 8)]><!-->
+   <script type="text/javascript">
+     (function(){var e=document.createElement("script");e.type="text/javascript";e.async=true;e.src=document.location.protocol+"//d1agz031tafz8n.cloudfront.net/thedaywefightback.js/widget.min.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)})()
+   </script>
+<!--<![endif]-->
 
 </body>
 </html>
