--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@ I am actively looking for strong students for research internships,
 MSc and PhD theses, etc. Here are two potential topics (but there are many other possible ones):</p>
 <ul>
   <li><a href="students/topics/2014/quick-chick.html">QuickChick:
-  Property-Based Testing for Coq</a> (<a href="students/topics/2014/quick-chick.pdf">PDF</a>)</li>
+  Property-Based Testing for Coq</a> (<a href="students/topics/2014/quick-chick.pdf">PDF</a>)<br/>
+  <a href="https://www.inria.fr/en/institute/recruitment/offers/phd/campaign-2014/(view)/details.html?id=PNGFK026203F3VBQB6G68LOE1&LOV5=4509&LG=EN&Resultsperpage=20&nPostingID=8363&nPostingTargetID=14104&option=52&sort=DESC&nDepartmentID=28"><strong>You can apply for an Inria-funded PhD on this topic.</strong></a>
+  </li>
   <li><a href="students/topics/2014/micro-policies.html">Micro-Policies:
   Formally Verified Low-Level Tagging Schemes for Safety and
   Security</a>
