--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <p style="width:42em; text-align: left">
 <!-- Starting in October 2013 -->
-I'm a Researcher (<a href="http://en.wikipedia.org/wiki/Academic_rank_in_France#Research_Positions">chargé de recherche</a>)
+I'm Researcher (<a href="http://en.wikipedia.org/wiki/Academic_rank_in_France#Research_Positions">chargé de recherche</a>)
 at <a href="https://www.inria.fr/en/">Inria</a>
 <a href="https://www.inria.fr/en/centre/paris-rocquencourt">Paris-Rocquencourt</a> in the
 <a href="http://prosecco.gforge.inria.fr/">Prosecco team</a>.</p>
