--- a/index.html
+++ b/index.html
@@ -207,8 +207,9 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><em><b>Fresh</b>: Property-Based Testing for Coq</em>
+  <li style="margin-bottom: 1ex;"><em><b>Fresh</b>: QuickChick: Speeding up Formal Proofs with Property-Based Testing</em>
     <ul style="font-size: small">
+      <li><b>Upcoming:</b> Coq Working Group @ PPS (2014-03-05)</li>
       <li>Inria Prosecco reading group: <a href="talks/property-based-testing-prosecco.pdf">slides</a>, <a href="talks/property-based-testing-prosecco-code.zip">code</a> (2013-11-29)</li>
     </ul>
   </li>
