--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@ Research Cambridge</a>.</p>
 
 <h2>Searching for Students</h2>
 <p style="width:42em; text-align: left">
-I am actively looking for strong students for research internships,
-MSc and PhD theses, etc. Here are two potential topics (but there are many other possible ones):</p>
+I am looking for talented, highly motivated students, for research
+internships, MSc and PhD theses, etc. Here are two potential topics
+(but there are many other possible ones):</p>
 <ul>
   <li style="margin-bottom: 1ex;"><a href="students/topics/2014/quick-chick2.pdf"> QuickChick: Speeding up Formal Proofs with Property-Based Testing (PDF)</a>
   <ul>
