--- a/publications.html
+++ b/publications.html
@@ -26,7 +26,7 @@
 
 <ol style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#355;cu, and Matteo Maffei. <b><a href="publications/rcf-and-or-coq-jcs2014.pdf">Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Secure Protocol Implementations</a></b>, Accepted in special issue of the <a href="http://www.iospress.nl/journal/journal-of-computer-security/">Journal of Computer Security (JCS)</a> for TOSCA-SecCo, January, 2014.
+  <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#355;cu, and Matteo Maffei. <b><a href="publications/rcf-and-or-coq-jcs2014.pdf">Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Secure Protocol Implementations</a></b>, <a href="http://www.iospress.nl/journal/journal-of-computer-security/">Journal of Computer Security (JCS)</a>; <a href="http://iospress.metapress.com/content/k28485h0t643/?p=f499e1ab872f49ddb4350156a27584e9&pi=0"> Special Issue on Foundational Aspects of Security</a>, 22(2):301-353, February, 2014.
   <ul style="font-size: small">
     <li><a href="publications/rcf-and-or-coq-tosca2011-post.pdf">Preliminary version</a> appeared in <a href="http://www.avantssar.eu/arspa-wits11/">Theory of Security and Applications (TOSCA'11)</a>, Invited paper, April 2011.</li>
     <li><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/wiki/WikiStart#Formalization">Machine-checked soundness proof in Coq</a> by C&#259;t&#259;lin Hri&#355;cu, February 2011.</li>
