--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><em>Micro-Policies: Formally Verified Low-Level Tagging Schemes for Safety and Security</em>
     <ul style="font-size: small">
-      <li><b>Upcoming:</b> <a href="http://csl.cs.uni-saarland.de/grsrd/2014/">Grande Region Security and Reliability Day 2014</a> in Saarbrücken (2014-03-12)</li>
+      <li><b>Upcoming:</b> <a href="http://csl.cs.uni-saarland.de/grsrd/2014/">Grande Region Security and Reliability Day</a> in Saarbrücken (2014-03-12)</li>
     </ul>
   </li>
 
