--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Research Cambridge</a>.</p>
 <h2>Searching for Students</h2>
 <p style="width:42em; text-align: left">
 I am looking for talented, highly motivated students, for research
-internships, MSc and PhD theses, etc. Here are two potential topics
+internships, MSc and PhD theses, etc. Here are some potential topics
 (but there are many other possible ones):</p>
 <ul>
   <li style="margin-bottom: 1ex;"><a href="students/topics/2014/quick-chick2.pdf"> QuickChick: Speeding up Formal Proofs with Property-Based Testing (PDF)</a>
@@ -63,6 +63,10 @@ internships, MSc and PhD theses, etc. Here are two potential topics
   Formally Verified Low-Level Tagging Schemes for Safety and
   Security</a>
   (<a href="students/topics/2014/micro-policies.pdf">PDF</a>)</li>
+  <li>NewF*: Next Generation Security Type System
+  <ul>
+  <li><a href="https://research.microsoft.com/en-us/projects/fstar/">You can read more about old F* here</a></li>
+  </ul></li>
 </ul>
 
 <p style="width:42em; text-align: left">
