--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ internships, MSc and PhD theses, etc. Here are some potential topics
   <li><a href="https://www.inria.fr/en/institute/recruitment/offers/phd/campaign-2014/(view)/details.html?id=PNGFK026203F3VBQB6G68LOE1&LOV5=4509&LG=EN&Resultsperpage=20&nPostingID=8363&nPostingTargetID=14104&option=52&sort=DESC&nDepartmentID=28"><strong>You can apply for an Inria-funded PhD fellowship on this topic!</strong></a></li>
   </ul>
   </li>
-  <li><a href="students/topics/2014/micro-policies.html">Micro-Policies:
+  <li style="margin-bottom: 1ex;"><a href="students/topics/2014/micro-policies.html">Micro-Policies:
   Formally Verified Low-Level Tagging Schemes for Safety and
   Security</a>
   (<a href="students/topics/2014/micro-policies.pdf">PDF</a>)</li>
