--- a/index.html
+++ b/index.html
@@ -348,6 +348,31 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
 <h2>Advised Students</h2>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
+  <ul>
+    <li style="margin-top: 1ex;">Internship at Inria, 2014-03 to 2015-08:<br/>
+      Micro-Policies: Formally Verified Low-Level Tagging Schemes for Safety and Security
+    </li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><a href="">Zoe Paraskevopoulou</a>
+  <ul>
+    <li style="margin-top: 1ex;">Internship at Inria, 2014-04 to 2015-09:<br/>
+      QuickChick: Speeding up Formal Proofs with Property-Based Testing
+    </li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><a href=""></a>
+  <ul>
+    <li style="margin-top: 1ex;">Internship at Inria, 2014-04 to 2015-09:<br/>
+      Micro-Policies: Formally Verified Tagging Schemes for Stack Protection and Control Flow Integrity
+    </li>
+  </ul>
+  </li>
+
+
   <li style="margin-bottom: 1ex;">Sam Panzer &amp; Nick Watson
   <ul>
     <li style="margin-top: 1ex;">Senior design project at UPenn, 2011-10 to 2012-04:<br/>
