--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="">Zoe Paraskevopoulou</a>
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/zoep">Zoe Paraskevopoulou</a>
   <ul>
     <li style="margin-top: 1ex;">Internship at Inria, 2014-04 to 2015-09:<br/>
       QuickChick: Speeding up Formal Proofs with Property-Based Testing
@@ -364,7 +364,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href=""></a>
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/nickgian">Nick Giannarakis</a>
   <ul>
     <li style="margin-top: 1ex;">Internship at Inria, 2014-04 to 2015-09:<br/>
       Micro-Policies: Formally Verified Tagging Schemes for Stack Protection and Control Flow Integrity
