--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   <li style="margin-bottom: 1ex;"><a href="https://github.com/nickgian">Nick Giannarakis</a>
   <ul>
     <li style="margin-top: 1ex;">Internship at Inria, 2014-04 to 2014-09:<br/>
-      Micro-Policies: Formally Verified Tagging Schemes for Stack Protection and Control Flow Integrity
+      Verified Micro-Policies for Stack Protection and Control Flow Integrity
     </li>
   </ul>
   </li>
