--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><em>QuickChick: Speeding up Formal Proofs with Property-Based Testing</em>
     <ul style="font-size: small">
-      <li><b>Upcoming:</b> <a href="http://www.pps.univ-paris-diderot.fr/gdt-types-realisabilite/">Coq Working Group @ PPS</a> (2014-03-19): <a href="talks/QuickChick-PPS.pdf">slides</a></li>
+      <li><b>Upcoming:</b> <a href="http://www.pps.univ-paris-diderot.fr/gdt-types-realisabilite/">Coq Working Group @ PPS</a>: <a href="talks/QuickChick-PPS.pdf">slides</a> (2014-03-19)</li>
       <li>Inria Prosecco reading group: <a href="talks/property-based-testing-prosecco.pdf">slides</a>, <a href="talks/property-based-testing-prosecco-code.zip">code</a> (2013-11-29)</li>
     </ul>
   </li>
