--- a/index.html
+++ b/index.html
@@ -212,16 +212,16 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><em>Micro-Policies: Formally Verified Low-Level Tagging Schemes for Safety and Security</em>
+  <li style="margin-bottom: 1ex;"><em>QuickChick: Speeding up Formal Proofs with Property-Based Testing</em>
     <ul style="font-size: small">
-      <li><b>Fresh:</b> <a href="http://csl.cs.uni-saarland.de/grsrd/2014/">Grande Region Security and Reliability Day</a> in Saarbrücken: <a href="talks/Micro-Policies-GRSRD.pdf">slides</a> (2014-03-12)</li>
+      <li><b>Fresh:</b> <a href="http://www.pps.univ-paris-diderot.fr/gdt-types-realisabilite/">Coq Working Group @ PPS</a>: <a href="talks/QuickChick-PPS.pdf">slides</a> (2014-03-19)</li>
+      <li>Inria Prosecco reading group: <a href="talks/property-based-testing-prosecco.pdf">slides</a>, <a href="talks/property-based-testing-prosecco-code.zip">code</a> (2013-11-29)</li>
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><em>QuickChick: Speeding up Formal Proofs with Property-Based Testing</em>
+  <li style="margin-bottom: 1ex;"><em>Micro-Policies: Formally Verified Low-Level Tagging Schemes for Safety and Security</em>
     <ul style="font-size: small">
-      <li><b>Upcoming:</b> <a href="http://www.pps.univ-paris-diderot.fr/gdt-types-realisabilite/">Coq Working Group @ PPS</a>: <a href="talks/QuickChick-PPS.pdf">slides</a> (2014-03-19)</li>
-      <li>Inria Prosecco reading group: <a href="talks/property-based-testing-prosecco.pdf">slides</a>, <a href="talks/property-based-testing-prosecco-code.zip">code</a> (2013-11-29)</li>
+      <li><b>Fresh:</b> <a href="http://csl.cs.uni-saarland.de/grsrd/2014/">Grande Region Security and Reliability Day</a> in Saarbrücken: <a href="talks/Micro-Policies-GRSRD.pdf">slides</a> (2014-03-12)</li>
     </ul>
   </li>
 
