--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="Penn/safe/git/verif/stock-pico/coq/kernel/">Alex Busenius</a>
+  <li style="margin-bottom: 1ex;"><a href="http://de.linkedin.com/in/busenius">Alex Busenius</a>
   <ul>
     <li style="margin-top: 1ex;">Master's Thesis, Finished 2011-04-04:<br/> <a href="http://www.infsec.cs.uni-saarland.de/projects/expi2java">Mechanized Formalization of a Transformation from an Extensible Spi Calculus to Java</a></li>
     <li style="margin-top: 1ex;">Bachelor's Thesis, Finished 2008-10-28:<br/><a href="http://www.infsec.cs.uni-saarland.de/projects/expi2java">Expi2Java - An Extensible Code Generator for Security Protocols</a></li>
