--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@ MPRI website</a>.</p>
 <h2>News</h2>
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
+   <a href="">The CRASH/SAFE project covered by <a href="http://www.sueddeutsche.de/digital/forschungsprojekt-crash-safe-von-null-auf-sicherheit-1.1970422">article in Süddeutsche Zeitung</a> (translation: <a href="https://www.duolingo.com/translation/e8956a3492f4308fc1090f17cb7a866d">part1</a>, <a href="https://www.duolingo.com/translation/a30a412b5218c0d8fe8471a06853155b">part2</a>)
+  </li>
+  <li style="margin-bottom: 1ex;">
    <a href="http://software.imdea.org/~bkoepf/FCS-FCC14/">Joint Workshop on Foundations of Computer Security and Formal and Computational Cryptography (FCS-FCC 2014)</a> (PC member)
   </li>
   <li style="margin-bottom: 1ex;">
