--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ MPRI website</a>.</p>
 <p><i>E-mail (preferred):</i> <a href="mailto:catalin.hritcu@gmail.com">catalin.hritcu@gmail.com</a></p>
 <p><i>Address:</i>
   <a href="http://prosecco.gforge.inria.fr/">Inria Prosecco team</a>, <a href="https://maps.google.com/maps?q=23+Avenue+d'Italie,+75013+Paris,+France">23 Avenue d'Italie, 75013 Paris, France</a></p>
-<p><i>Office:</i> #11 (5th floor)</p>
+<p><i>Office:</i> <strong>#31</strong> (5th floor)</p>
 
 <h2>News</h2>
 <ul style="width:42em; text-align: left">
