--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><em>Micro-Policies: Formally Verified Low-Level Tagging Schemes for Safety and Security</em>
     <ul style="font-size: small">
-      <li><b>Fresh:</b> <a href="http://csl.cs.uni-saarland.de/grsrd/2014/">Grande Region Security and Reliability Day</a> in Saarbrücken: <a href="talks/Micro-Policies-GRSRD.pdf">slides</a> (2014-03-12)</li>
+      <li><b>Upcoming:</b> <a href="">Joint Workshop on Foundations of Computer Security and Formal and Computational Cryptography (FCS-FCC)</a> in Vienna<!--: <a href="talks/.pdf">slides</a>--> (2014-06-14)</li>
+      <li><a href="http://csl.cs.uni-saarland.de/grsrd/2014/">Grande Region Security and Reliability Day</a> in Saarbrücken: <a href="talks/Micro-Policies-GRSRD.pdf">slides</a> (2014-03-12)</li>
     </ul>
   </li>
 
