--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><em>QuickChick: Speeding up Formal Proofs with Property-Based Testing</em>
     <ul style="font-size: small">
-      <li><b>Upcoming:</b> <a href="">Maxime Denes</a> will present at the <a href="">Coq Workshop</a> in Viena<!--: <a href="talks/.pdf">slides</a>--> (2014-06-14)</li>
+      <li><b>Upcoming:</b> <a href="http://www.maximedenes.fr/">Maxime Dénès</a> will present at the <a href="http://vsl2014.at/meetings/Coq-index.html">Coq Workshop</a> in Viena<!--: <a href="talks/.pdf">slides</a>--> (2014-06-14)</li>
       <li><a href="http://www.pps.univ-paris-diderot.fr/gdt-types-realisabilite/">Coq Working Group @ PPS</a>: <a href="talks/QuickChick-PPS.pdf">slides</a> (2014-03-19)</li>
       <li>Inria Prosecco reading group: <a href="talks/property-based-testing-prosecco.pdf">slides</a>, <a href="talks/property-based-testing-prosecco-code.zip">code</a> (2013-11-29)</li>
     </ul>
