--- a/publications.html
+++ b/publications.html
@@ -40,7 +40,7 @@
     <li>More information can be found on <a href="http://research.microsoft.com/en-us/projects/dminor">the Dminor project website at Microsoft Research</a>.</li>
     <li><a href="publications/dminor-icfp2010.pdf">An abridged version</a> appeared in <a href="http://www.icfpconference.org/icfp2010/">15th ACM SIGPLAN International Conference on Functional Programming (ICFP 2010)</a>, September 2010</li>
     <!--<li>Microsoft Research technical report (<a href="http://research.microsoft.com/apps/pubs/default.aspx?id=135577">MSR-TR-2010-99</a>), December 2011.</li>-->
-    <li>The Dminor model and some of the proofs in this paper are <a href="http://www.infsec.cs.uni-saarland.de/~hritcu/publications/Dminor-model.zip">formalized in Coq</a>, November 2010.</li>
+    <li>The Dminor model and some of the proofs in this paper are <a href="publications/Dminor-model.zip">formalized in Coq</a>, November 2010.</li>
   </ul>
   </li>
 
