--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
       <li><a href="http://research.microsoft.com/en-us/labs/cambridge/">Microsoft Research Cambridge</a>: <a href="talks/crash-safe-msr.pdf">slides</a>; <b><a href="http://research.microsoft.com/apps/video/dl.aspx?id=192479">video</a></b> (2013-03-28)</li>
       <li><a href="http://www.infsec.cs.uni-saarland.de/">Prosecco team at Inria Paris-Rocquencourt</a>: <a href="talks/crash-safe-inria.pdf">slides</a> (2013-01-04)</li>
       <li><a href="http://www.infsec.cs.uni-saarland.de/">InfSec group at Saarland University</a>: <a href="talks/crash-safe-infsec.pdf">slides</a> (2012-12-18)</li>
-      <li><a href="http://www.ec-spride.tu-darmstadt.de">EC SPRIDE at TU Darmstadt</a>: <a href="talks/crash-safe-darmstadt.pdf">slides</a> (2012-12-18)</li>
+      <li><a href="http://www.ec-spride.tu-darmstadt.de/ec-spride/">EC SPRIDE at TU Darmstadt</a>: <a href="talks/crash-safe-darmstadt.pdf">slides</a> (2012-12-18)</li>
     </ul>
     <ul style="font-size: small">
     </ul>
@@ -282,13 +282,13 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.seas.upenn.edu/~cis500/">Software Foundations</a></b>
     - CIS500 at UPenn, Spring 2012.
-    Guest lecturer for 6 lectures:    
+    Guest lecturer for 6 lectures:
     <ul style="font-size: small">
-      <li><a href="http://www.seas.upenn.edu/~cis500/current/sf/Poly.html#lab107">More About Coq and Varying the Induction Hypothesis</a> (2012-01-25)</li>
-      <li><a href="http://www.seas.upenn.edu/~cis500/current/sf/Imp.html">Coq Automation and While Programs</a> (2012-02-20 and 2012-02-22)</li>
-      <li><a href="http://www.seas.upenn.edu/~cis500/current/sf/Rel.html">Properties of Relations</a> (2012-03-21)</li>
-      <li><a href="http://www.seas.upenn.edu/~cis500/current/sf/Stlc.html#lab563">Properties of the Simply Typed Lambda-Calculus</a> (2012-04-16)</li>
-      <li><a href="http://www.seas.upenn.edu/~cis500/current/sf/MoreStlc.html">Simple Extensions to the Simply Typed Lambda-Calculus</a> (2012-04-18)</li>
+      <li>More About Coq and Varying the Induction Hypothesis (2012-01-25)</li>
+      <li>Coq Automation and While Programs (2012-02-20 and 2012-02-22)</li>
+      <li>Properties of Relations (2012-03-21)</li>
+      <li>Properties of the Simply Typed Lambda-Calculus (2012-04-16)</li>
+      <li>Simple Extensions to the Simply Typed Lambda-Calculus (2012-04-18)</li>
     </ul>
   </li>
 
@@ -309,7 +309,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
     - Core Lecture, Saarland University, Winter 2010/11.
     Guest lecturer for 1 lecture:
     <ul style="font-size: small">
-      <li><a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/04-control-hijacking-defenses-2010.pdf">Control Hijacking: Defenses</a> (2010-10-28)</li>
+      <li><a href="talks/04-control-hijacking-defenses-2010.pdf">Control Hijacking: Defenses</a> (2010-10-28)</li>
     </ul>
   </li>
 
@@ -318,8 +318,8 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
     (<b>Best lecture award</b>).
     Guest lecturer for 3 lectures:
     <ul style="font-size: small">
-      <li><a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/05-control-hijacking-defenses.pdf">Control Hijacking: Defenses</a> (2009-05-22)</li>
-      <li><a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/04-control-hijacking-attacks.pdf">Control Hijacking Attacks</a> (2009-05-15)</li>
+      <li><a href="talks/05-control-hijacking-defenses.pdf">Control Hijacking: Defenses</a> (2009-05-22)</li>
+      <li><a href="talks/04-control-hijacking-attacks.pdf">Control Hijacking Attacks</a> (2009-05-15)</li>
       <li>Security problems in network protocols; TLS (2009-06-26)</li>
     </ul>
   </li>
@@ -423,7 +423,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   Benjamin C. Pierce, Jesse A. Tov, and others</li>
   <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">F5: a tool-chain for RCF</a>, with Thorsten Tarrach</li>
   <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/dverify">DVerify: a verification tool for the "M" language</a> by Thorsten Tarrach</li>
-  <li style="margin-bottom: 1ex;"><a href="http://research.microsoft.com/en-us/projects/dminor">Dminor: a type-checker using semantic subtyping</a> with Gavin Bierman and Andy Gordon</li>
+  <li style="margin-bottom: 1ex;"><a href="https://research.microsoft.com/en-us/projects/dminor/">Dminor: a type-checker using semantic subtyping</a> with Gavin Bierman and Andy Gordon</li>
   <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/expi2java">Expi2Java: an extensible code generator for security protocols</a> by Alex Busenius</li>
   <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/zk-compromise">Protocol transformation for achieving security despite compromise</a> by Martin Grochulla</li>
 <!--  <li style="margin-bottom: 1ex;"><a href="http://mail-infsec.cs.uni-saarland.de:8000/projects/spi2fs/">Spi2F#: a prototype code generator for security protocols</a> by Thorsten Tarrach</li>-->
