--- a/talks.html
+++ b/talks.html
@@ -97,48 +97,48 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
 
   <li style="margin-bottom: 1ex;"><em>Union, Intersection, and Refinement Types and Reasoning about Type Disjointness for Analyzing Protocol Implementations</em>
     <ul style="font-size: small">
-      <li><a href="http://www.cis.upenn.edu/~plclub">Penn PLClub</a>: <a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/rcf-and-or-coq-plclub.pdf">slides</a> (2011-07-20)</li>
+      <li><a href="http://www.cis.upenn.edu/~plclub">Penn PLClub</a>: <a href="talks/rcf-and-or-coq-plclub.pdf">slides</a> (2011-07-20)</li>
     </ul>
     <ul style="font-size: small">
-      <li><a href="http://www.msr-inria.inria.fr/">MSR-Inria Joint Centre</a>, Parc Orsay Université: <a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/rcf-and-or-coq-msr-inria.pdf">slides</a> (2010-12-07)</li>
+      <li><a href="http://www.msr-inria.inria.fr/">MSR-Inria Joint Centre</a>, Parc Orsay Université: <a href="talks/rcf-and-or-coq-msr-inria.pdf">slides</a> (2010-12-07)</li>
     </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><em>Semantic Subtyping with an SMT Solver</em>
     <ul style="font-size: small">
-      <li><a href="http://www.icfpconference.org/icfp2010/">15th ACM SIGPLAN International Conference on Functional Programming (ICFP 2010)</a>: <a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/dminor-icfp.pdf">slides</a>; <b><a href="http://vimeo.com/16539521">video</a></b> (2010-09-27)</li>
-      <li><a href="http://research.microsoft.com/en-us/um/people/adg/RADICAL2010/">Workshop on Relations and Data Integrity Constraints and Languages (RADICAL 2010)</a>: <a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/dminor-radical.pdf">slides</a>; <b><a href="http://research.microsoft.com/en-us/um/people/adg/RADICAL2010/movies/mp4_day1/4%20Catalin%20Hritcu.mp4">video</a></b> <br/> (2010-05-10)</li>
-      <li><a href="http://www.infsec.cs.uni-saarland.de/teaching/reading">Information Security and Cryptography Group</a>: <a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/dminor-infsec.pdf">slides</a> (2009-12-16)</li>
+      <li><a href="http://www.icfpconference.org/icfp2010/">15th ACM SIGPLAN International Conference on Functional Programming (ICFP 2010)</a>: <a href="talks/dminor-icfp.pdf">slides</a>; <b><a href="http://vimeo.com/16539521">video</a></b> (2010-09-27)</li>
+      <li><a href="http://research.microsoft.com/en-us/um/people/adg/RADICAL2010/">Workshop on Relations and Data Integrity Constraints and Languages (RADICAL 2010)</a>: <a href="talks/dminor-radical.pdf">slides</a>; <b><a href="http://research.microsoft.com/en-us/um/people/adg/RADICAL2010/movies/mp4_day1/4%20Catalin%20Hritcu.mp4">video</a></b> <br/> (2010-05-10)</li>
+      <li><a href="http://www.infsec.cs.uni-saarland.de/teaching/reading">Information Security and Cryptography Group</a>: <a href="talks/dminor-infsec.pdf">slides</a> (2009-12-16)</li>
     </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><em>Type-checking Implementations of Protocols Based on Zero-knowledge Proofs - Work in Progress</em>
     <ul style="font-size: small">
-      <li><a href="http://www.loria.fr/~cortier/FCS09/">Workshop on Foundations of Computer Security (FCS 2009)</a>: <a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/zk-rcf-fcs.pdf">slides</a> (2009-08-10)</li>
+      <li><a href="http://www.loria.fr/~cortier/FCS09/">Workshop on Foundations of Computer Security (FCS 2009)</a>: <a href="talks/zk-rcf-fcs.pdf">slides</a> (2009-08-10)</li>
     </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><em>Achieving Security Despite Compromise Using Zero-knowledge</em>
     <ul style="font-size: small">
-      <li><a href="http://www.cs.sunysb.edu/csf09/">22th IEEE Symposium on Computer Security Foundations (CSF 2009)</a>: <a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/zk-compromise-csf.pdf">slides</a> (2009-07-10)</li>
-      <li><a href="http://www.infsec.cs.uni-saarland.de/teaching/reading">Information Security and Cryptography Group</a>: <a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/zk-compromise-infsec.pdf">slides</a> (2009-04-21 and 2009-06-30)</li>
-      <li><a href="http://www.avantssar.eu/arspa-wits09/">Joint Workshop on Automated Reasoning for Security Protocol Analysis and Issues in the Theory of Security (ARSPA-WITS'09)</a>: <a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/zk-compromise-wits.pdf">slides</a> (2009-03-29)</li>
+      <li><a href="http://www.cs.sunysb.edu/csf09/">22th IEEE Symposium on Computer Security Foundations (CSF 2009)</a>: <a href="talks/zk-compromise-csf.pdf">slides</a> (2009-07-10)</li>
+      <li><a href="http://www.infsec.cs.uni-saarland.de/teaching/reading">Information Security and Cryptography Group</a>: <a href="talks/zk-compromise-infsec.pdf">slides</a> (2009-04-21 and 2009-06-30)</li>
+      <li><a href="http://www.avantssar.eu/arspa-wits09/">Joint Workshop on Automated Reasoning for Security Protocol Analysis and Issues in the Theory of Security (ARSPA-WITS'09)</a>: <a href="talks/zk-compromise-wits.pdf">slides</a> (2009-03-29)</li>
     </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><em>Type-checking Zero-knowledge</em>
     <ul style="font-size: small">
-      <li><a href="http://www.sigsac.org/ccs/CCS2008/">15th ACM Conference on Computer and Communications Security (CCS 2008)</a>: <a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/typing-zk-ccs.pdf">slides</a>, <a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/typing-zk-ccs-notes.pdf">notes</a> (2008-10-29)</li>
-      <li><a href="http://research.microsoft.com/labs/cam.asp">Microsoft Research Cambridge</a>: <a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/typing-zk-msrc.pdf">slides</a> (2008-07-22)</li>
+      <li><a href="http://www.sigsac.org/ccs/CCS2008/">15th ACM Conference on Computer and Communications Security (CCS 2008)</a>: <a href="talks/typing-zk-ccs.pdf">slides</a>, <a href="talks/typing-zk-ccs-notes.pdf">notes</a> (2008-10-29)</li>
+      <li><a href="http://research.microsoft.com/labs/cam.asp">Microsoft Research Cambridge</a>: <a href="talks/typing-zk-msrc.pdf">slides</a> (2008-07-22)</li>
     </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><em>Automatic Verification of Remote Electronic Voting Protocols</em>
     <ul style="font-size: small">
-      <li><a href="http://research.microsoft.com/labs/cam.asp">Microsoft Research Cambridge</a>: <a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/electronic-voting-msrc.pdf">slides</a> (2008-07-21)</li>    
-      <li><a href="http://www.cylab.cmu.edu/CSF2008/">21st IEEE Computer Security Foundations Symposium (CSF)</a>: <a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/electronic-voting-csf.pdf">slides</a> (2008-06-24)</li>
-      <li>Colloquium of the <a href="http://frweb.cs.uni-sb.de/index.php?id=189&amp;L=0">GK</a> and of the <a href="http://www.imprs-cs.de/">IMPRS</a>: <a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/electronic-voting-gk-imprs.pdf">slides</a> (2008-06-12)</li>
-      <li><a href="http://www.mpi-sws.mpg.de/">Max Planck Institute for Software Systems</a> (Retreat in Berlin): <a href="http://www.infsec.cs.uni-saarland.de/~hritcu/talks/ev-applied-retreat.pdf">slides</a> (2008-03-11)</li>
+      <li><a href="http://research.microsoft.com/labs/cam.asp">Microsoft Research Cambridge</a>: <a href="talks/electronic-voting-msrc.pdf">slides</a> (2008-07-21)</li>    
+      <li><a href="http://www.cylab.cmu.edu/CSF2008/">21st IEEE Computer Security Foundations Symposium (CSF)</a>: <a href="talks/electronic-voting-csf.pdf">slides</a> (2008-06-24)</li>
+      <li>Colloquium of the <a href="http://frweb.cs.uni-sb.de/index.php?id=189&amp;L=0">GK</a> and of the <a href="http://www.imprs-cs.de/">IMPRS</a>: <a href="talks/electronic-voting-gk-imprs.pdf">slides</a> (2008-06-12)</li>
+      <li><a href="http://www.mpi-sws.mpg.de/">Max Planck Institute for Software Systems</a> (Retreat in Berlin): <a href="talks/ev-applied-retreat.pdf">slides</a> (2008-03-11)</li>
     </ul>
   </li>
 
