--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@ internships, MSc and PhD theses, etc. Here are some potential topics
   </ul>
 -->
   </li>
-  <li style="margin-bottom: 1ex;"><a href="students/topics/2014/micro-policies.html">Micro-Policies:
-  Formally Verified Low-Level Tagging Schemes for Safety and
-  Security</a>
+  <li style="margin-bottom: 1ex;"><a href="students/topics/2014/micro-policies.html">Micro-Policies: Formally Verified Hardware-Assisted Security Monitors</a>
   (<a href="students/topics/2014/micro-policies.pdf">PDF</a>)</li>
   <li>NewF*: Next Generation Security Type System
   <ul>
@@ -358,7 +356,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
   <ul>
     <li style="margin-top: 1ex;">Internship at Inria, 2014-03 to 2014-08:<br/>
-      Micro-Policies: Formally Verified Low-Level Tagging Schemes for Safety and Security
+      Micro-Policies: Formally Verified Hardware-Assisted Security Monitors
     </li>
   </ul>
   </li>
@@ -366,7 +364,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   <li style="margin-bottom: 1ex;"><a href="https://github.com/zoep">Zoe Paraskevopoulou</a>
   <ul>
     <li style="margin-top: 1ex;">Internship at Inria, 2014-04 to 2014-09:<br/>
-      QuickChick: Speeding up Formal Proofs with Property-Based Testing
+      QuickChick: Formally Certified Property-Based Testing
     </li>
   </ul>
   </li>
@@ -374,7 +372,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   <li style="margin-bottom: 1ex;"><a href="https://github.com/nickgian">Nick Giannarakis</a>
   <ul>
     <li style="margin-top: 1ex;">Internship at Inria, 2014-04 to 2014-09:<br/>
-      Verified Micro-Policies for Stack Protection and Control Flow Integrity
+      Formally Verified Micro-Policy for <!--Stack Protection and--> Control Flow Integrity
     </li>
   </ul>
   </li>
