--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   </li>
 
 
-  <li style="margin-bottom: 1ex;">Sam Panzer &amp; Nick Watson
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/sam-panzer">Sam Panzer</a> &amp; <a href="https://www.linkedin.com/pub/nicholas-watson/2a/ba1/a17">Nick Watson</a>
   <ul>
     <li style="margin-top: 1ex;">Senior design project at UPenn, 2011-10 to 2012-04:<br/>
       Zephyr: A Content Management System in Breeze
