--- a/index.html
+++ b/index.html
@@ -170,6 +170,18 @@ MPRI website</a>.</p>
     David Pichardie,
     Benjamin C. Pierce,
     Randy Pollack, and
+    Andrew Tolmach. <b><a href="">A Verified Information-Flow Architecture</a></b>. Submitted. July 2014.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    Arthur Azevedo de Amorim,
+    Nathan Collins,
+    André DeHon,
+    Delphine Demange,
+    C&#259;t&#259;lin Hri&#355;cu,
+    David Pichardie,
+    Benjamin C. Pierce,
+    Randy Pollack, and
     Andrew Tolmach. <b><a href="http://www.crash-safe.org/node/29">A Verified Information-Flow Architecture</a></b>. In <a href="http://popl.mpi-sws.org/2014/">41st ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages (POPL)</a>, pages 165-178. ACM, January 2014.
 <!--
   <ul style="font-size: small">
