--- a/index.html
+++ b/index.html
@@ -163,14 +163,12 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;">
     Arthur Azevedo de Amorim,
-    Nathan Collins,
-    André DeHon,
-    Delphine Demange,
+    Maxime Dénès,
+    Nick Giannarakis,
     C&#259;t&#259;lin Hri&#355;cu,
-    David Pichardie,
     Benjamin C. Pierce,
-    Randy Pollack, and
-    Andrew Tolmach. <b><a href="">A Verified Information-Flow Architecture</a></b>. Submitted. July 2014.
+    Antal Spector-Zabusky,
+    Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micropolicies-draft.pdf">Micro-Policies: A Framework for Verified, Hardware-Assisted Security Monitors</a></b>. Submitted. July 2014.
   </li>
 
   <li style="margin-bottom: 1ex;">
