--- a/index.html
+++ b/index.html
@@ -99,10 +99,13 @@ MPRI website</a>.</p>
   <a href="http://prosecco.gforge.inria.fr/">Inria Prosecco team</a>, <a href="https://maps.google.com/maps?q=23+Avenue+d'Italie,+75013+Paris,+France">23 Avenue d'Italie, 75013 Paris, France</a></p>
 <p><i>Office (new):</i> <strong>#31</strong> (5th floor)</p>
 
-<h2>News</h2>
+<h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
-   <a href="">CRASH/SAFE project covered by <a href="http://www.sueddeutsche.de/digital/forschungsprojekt-crash-safe-von-null-auf-sicherheit-1.1970422">article in Süddeutsche Zeitung</a> <br/>(translation: <a href="https://www.duolingo.com/translation/e8956a3492f4308fc1090f17cb7a866d">part1</a>, <a href="https://www.duolingo.com/translation/a30a412b5218c0d8fe8471a06853155b">part2</a>)
+   <a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">The Joint EasyCrypt-F*-CryptoVerif School 2014</a> (organizer) 
+  </li>
+  <li style="margin-bottom: 1ex;">
+   <a href="http://www.crash-safe.org/">CRASH/SAFE project covered by <a href="http://www.sueddeutsche.de/digital/forschungsprojekt-crash-safe-von-null-auf-sicherheit-1.1970422">article in Süddeutsche Zeitung</a> <br/>(translation: <a href="https://www.duolingo.com/translation/e8956a3492f4308fc1090f17cb7a866d">part1</a>, <a href="https://www.duolingo.com/translation/a30a412b5218c0d8fe8471a06853155b">part2</a>)
   </li>
   <li style="margin-bottom: 1ex;">
    <a href="http://software.imdea.org/~bkoepf/FCS-FCC14/">Joint Workshop on Foundations of Computer Security and Formal and Computational Cryptography (FCS-FCC 2014)</a> (PC member)
@@ -115,9 +118,11 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;">
     <a href="http://acns2014.epfl.ch/">12th International Conference on Applied Cryptography and Network Security (ACNS 2014)</a> (PC member)
   </li>
+<!-- TODO: make a separate section for past events
   <li style="margin-bottom: 1ex;">
     <a href="http://prosecco.gforge.inria.fr/personal/bblanche/fcs13/">Workshop on Foundations of Computer Security (FCS 2013)</a> (PC member)
   </li>
+-->
 </ul>
 
 <h2>Research Interests</h2>
