--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><em>Micro-Policies: Formally Verified Low-Level Tagging Schemes for Safety and Security</em>
     <ul style="font-size: small">
-      <li><b>Upcoming:</b> <a href="http://www.easychair.org/smart-program/VSL2014/FCSFCC-program.html#talk:2906">Joint Workshop on Foundations of Computer Security and Formal and Computational Cryptography (FCS-FCC)</a> in Vienna<!--: <a href="talks/.pdf">slides</a>--> (2014-07-18 at 15:30)</li>
+      <li><b>Upcoming:</b> <a href="http://www.easychair.org/smart-program/VSL2014/FCSFCC-program.html#talk:2906">Joint Workshop on Foundations of Computer Security and Formal and Computational Cryptography (FCS-FCC)</a> in Vienna: <a href="talks/Micro-Policies-FCS.pdf">slides</a> (2014-07-18 at 15:30)</li>
       <li><a href="http://csl.cs.uni-saarland.de/grsrd/2014/">Grande Region Security and Reliability Day</a> in Saarbrücken: <a href="talks/Micro-Policies-GRSRD.pdf">slides</a> (2014-03-12)</li>
     </ul>
   </li>
