--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ internships, MSc and PhD theses, etc. Here are some potential topics
   </ul>
 -->
   </li>
-  <li style="margin-bottom: 1ex;"><a href="students/topics/2014/micro-policies.html">Micro-Policies: Formally Verified Hardware-Assisted Security Monitors</a>
+  <li style="margin-bottom: 1ex;"><a href="students/topics/2014/micro-policies.html">Micro-Policies: Formally Verified, Hardware-Assisted Security Monitors</a>
   (<a href="students/topics/2014/micro-policies.pdf">PDF</a>)</li>
   <li>NewF*: Next Generation Security Type System
   <ul>
