--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ MPRI website</a>.</p>
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><em>Micro-Policies: Formally Verified Tagging Schemes for Safety and Security</em>
+  <li style="margin-bottom: 1ex;"><em>Micro-Policies: A Framework for Verified, Hardware-Assisted Security Monitors</em>
     <ul style="font-size: small">
       <li><a href="http://www.easychair.org/smart-program/VSL2014/FCSFCC-program.html#talk:2906">Joint Workshop on Foundations of Computer Security and Formal and Computational Cryptography (FCS-FCC)</a>: <a href="talks/Micro-Policies-FCS.pdf">slides</a> (2014-07-18)</li>
       <li><a href="http://csl.cs.uni-saarland.de/grsrd/2014/">Grande Region Security and Reliability Day</a> in Saarbrücken: <a href="talks/Micro-Policies-GRSRD.pdf">slides</a> (2014-03-12)</li>
