--- a/index.html
+++ b/index.html
@@ -426,12 +426,12 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
 
 <h2 id="tools">Software</h2>
 <ul style="width:42em; text-align: left">
-  <li style="margin-bottom: 1ex;"><b>New:</b>
+  <li style="margin-bottom: 1ex;">
     <a href="http://www.crash-safe.org">CRASH/SAFE</a>:
       clean-slate co-design of a secure
       architecture, including novel hardware, operating
       system, and programming language (team effort)</li>
-  <li style="margin-bottom: 1ex;"><b>New:</b>
+  <li style="margin-bottom: 1ex;">
     <a href="http://www.crash-safe.org/releases">Breeze: 
   a programming language with dynamic information flow control 
   and label-based access control</a>, with
