--- a/talks.html
+++ b/talks.html
@@ -65,7 +65,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
       <li><a href="http://research.microsoft.com/en-us/labs/cambridge/">Microsoft Research Cambridge</a>: <a href="talks/crash-safe-msr.pdf">slides</a>; <b><a href="http://research.microsoft.com/apps/video/dl.aspx?id=192479">video</a></b> (2013-03-28)</li>
       <li><a href="http://www.infsec.cs.uni-saarland.de/">Prosecco team at Inria Paris-Rocquencourt</a>: <a href="talks/crash-safe-inria.pdf">slides</a> (2013-01-04)</li>
       <li><a href="http://www.infsec.cs.uni-saarland.de/">InfSec group at Saarland University</a>: <a href="talks/crash-safe-infsec.pdf">slides</a> (2012-12-18)</li>
-      <li><a href="http://www.ec-spride.tu-darmstadt.de">EC SPRIDE at TU Darmstadt</a>: <a href="talks/crash-safe-darmstadt.pdf">slides</a> (2012-12-18)</li>
+      <li><a href="http://www.ec-spride.tu-darmstadt.de/ec-spride/">EC SPRIDE at TU Darmstadt</a>: <a href="talks/crash-safe-darmstadt.pdf">slides</a> (2012-12-18)</li>
     </ul>
     <ul style="font-size: small">
     </ul>
