--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ internships, MSc and PhD theses, etc. Here are some potential topics:
   </li>
   <li style="margin-bottom: 1ex;"><a href="students/topics/2014/micro-policies.html">Micro-Policies: Formally Verified, Hardware-Assisted Security Monitors</a>
   (<a href="students/topics/2014/micro-policies.pdf">PDF</a>)</li>
-  <li>NewF*: Next Generation Security Type System
+  <li><a href="https://github.com/FStarLang/FStar">NewF*: Next Generation Security Type System</a>
   <ul>
   <li><a href="https://research.microsoft.com/en-us/projects/fstar/">You can read more about old F* here</a></li>
   </ul></li>
