--- a/index.html
+++ b/index.html
@@ -168,6 +168,16 @@ MPRI website</a>.</p>
 (also on <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a> and <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu,
+    Leonidas Lampropoulos,
+    Antal Spector-Zabusky,
+    Arthur Azevedo de Amorim,
+    Maxime Dénès,
+    John Hughes,
+    Benjamin C. Pierce, and
+    Dimitrios Vytiniotis. <b><a href="">Testing Noninterference, Quickly</a></b>. <a href="">ArXiv</a>. 1 September 2014.
+  </li>
+
   <li style="margin-bottom: 1ex;">
     Arthur Azevedo de Amorim,
     Maxime Dénès,
