--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@ MPRI website</a>.</p>
     Maxime Dénès,
     John Hughes,
     Benjamin C. Pierce, and
-    Dimitrios Vytiniotis. <b><a href="">Testing Noninterference, Quickly</a></b>. <a href="">ArXiv</a>. 1 September 2014.
+    Dimitrios Vytiniotis. <b><a href="">Testing Noninterference, Quickly</a></b>. <a href="">ArXiv</a>. Submitted to Special Issue of Journal of Functional Programming
+      for ICFP 2013. 1 September 2014.
   </li>
 
   <li style="margin-bottom: 1ex;">
