--- a/index.html
+++ b/index.html
@@ -187,6 +187,9 @@ MPRI website</a>.</p>
     Antal Spector-Zabusky,
     Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micropolicies-draft.pdf">Micro-Policies: A Framework for Verified, Hardware-Assisted Security Monitors</a></b>. Submitted. July 2014.
   </li>
+  <ul style="font-size: small">
+    <li><a href="https://github.com/micro-policies/micro-policies-coq">Coq proofs</a></li>
+  </ul>
 
   <li style="margin-bottom: 1ex;">
     Arthur Azevedo de Amorim,
