--- a/index.html
+++ b/index.html
@@ -418,16 +418,36 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
 <h2 id="tools">Software</h2>
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
+    <a href="https://github.com/FStarLang/FStar">F*</a>:
+      Next Generation Security Type System
+      (with Karthik Bhargavan, Cédric Fournet, Chantal Keller,
+       Alfredo Pironti, Pierre-Yves Strub, Nikhil Swamy, and others)</li>
+
+  <li style="margin-bottom: 1ex;">
+    <a href="https://github.com/QuickChick">QuickChick</a>:
+      Property-Based Testing Plugin for Coq
+      (with Maxime Dénès, Leonidas Lampropoulos, Zoe Paraskevopoulou,
+       and Benjamin C. Pierce)</li>
+
+  <li style="margin-bottom: 1ex;">
+    <a href="https://github.com/micro-policies">Micro-Policies</a>:
+      Formally Verified, Hardware-Assisted Security Monitors
+      (with Arthur Azevedo de Amorim, André DeHon, Maxime Dénès, Udit Dhawan,
+       Nick Giannarakis, Benjamin C. Pierce, Antal Spector-Zabusky, and Andrew Tolmach)</li>
+
+  <li style="margin-bottom: 1ex;">
     <a href="http://www.crash-safe.org">CRASH/SAFE</a>:
       clean-slate co-design of a secure
       architecture, including novel hardware, operating
       system, and programming language (team effort)</li>
+
   <li style="margin-bottom: 1ex;">
     <a href="http://www.crash-safe.org/releases">Breeze: 
   a programming language with dynamic information flow control 
   and label-based access control</a>, with
   Michael Greenberg, Ben Karel,  Benoît Montagu,
   Benjamin C. Pierce, Jesse A. Tov, and others</li>
+
   <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">F5: a tool-chain for RCF</a>, with Thorsten Tarrach</li>
   <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/dverify">DVerify: a verification tool for the "M" language</a> by Thorsten Tarrach</li>
   <li style="margin-bottom: 1ex;"><a href="https://research.microsoft.com/en-us/projects/dminor/">Dminor: a type-checker using semantic subtyping</a> with Gavin Bierman and Andy Gordon</li>
