--- a/index.html
+++ b/index.html
@@ -418,20 +418,20 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
 <h2 id="tools">Software</h2>
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
-    <a href="https://github.com/FStarLang/FStar">F*</a>:
-      Next Generation Security Type System
+    <a href="https://github.com/FStarLang/FStar">F*:
+      Next Generation Security Type System</a>
       (with Karthik Bhargavan, Cédric Fournet, Chantal Keller,
        Alfredo Pironti, Pierre-Yves Strub, Nikhil Swamy, and others)</li>
 
   <li style="margin-bottom: 1ex;">
-    <a href="https://github.com/QuickChick">QuickChick</a>:
-      Property-Based Testing Plugin for Coq
+    <a href="https://github.com/QuickChick">QuickChick:
+      Property-Based Testing Plugin for Coq</a>
       (with Maxime Dénès, Leonidas Lampropoulos, Zoe Paraskevopoulou,
        and Benjamin C. Pierce)</li>
 
   <li style="margin-bottom: 1ex;">
-    <a href="https://github.com/micro-policies">Micro-Policies</a>:
-      Formally Verified, Hardware-Assisted Security Monitors
+    <a href="https://github.com/micro-policies">Micro-Policies:
+      Formally Verified, Hardware-Assisted Security Monitors</a>
       (with Arthur Azevedo de Amorim, André DeHon, Maxime Dénès, Udit Dhawan,
        Nick Giannarakis, Benjamin C. Pierce, Antal Spector-Zabusky, and Andrew Tolmach)</li>
 
