--- a/index.html
+++ b/index.html
@@ -444,17 +444,17 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   <li style="margin-bottom: 1ex;">
     <a href="http://www.crash-safe.org/releases">Breeze: 
   a programming language with dynamic information flow control 
-  and label-based access control</a>, with
+  and label-based access control</a> (with
   Michael Greenberg, Ben Karel,  Benoît Montagu,
-  Benjamin C. Pierce, Jesse A. Tov, and others</li>
+  Benjamin C. Pierce, Jesse A. Tov, and others)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">F5: a tool-chain for RCF</a>, with Thorsten Tarrach</li>
-  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/dverify">DVerify: a verification tool for the "M" language</a> by Thorsten Tarrach</li>
-  <li style="margin-bottom: 1ex;"><a href="https://research.microsoft.com/en-us/projects/dminor/">Dminor: a type-checker using semantic subtyping</a> with Gavin Bierman and Andy Gordon</li>
-  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/expi2java">Expi2Java: an extensible code generator for security protocols</a> by Alex Busenius</li>
-  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/zk-compromise">Protocol transformation for achieving security despite compromise</a> by Martin Grochulla</li>
+  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">F5: a tool-chain for RCF</a> (with Thorsten Tarrach)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/dverify">DVerify: a verification tool for the "M" language</a> (by Thorsten Tarrach)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://research.microsoft.com/en-us/projects/dminor/">Dminor: a type-checker using semantic subtyping</a> (with Gavin Bierman and Andy Gordon)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/expi2java">Expi2Java: an extensible code generator for security protocols</a> (by Alex Busenius)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/zk-compromise">Protocol transformation for achieving security despite compromise</a> (by Martin Grochulla)</li>
 <!--  <li style="margin-bottom: 1ex;"><a href="http://mail-infsec.cs.uni-saarland.de:8000/projects/spi2fs/">Spi2F#: a prototype code generator for security protocols</a> by Thorsten Tarrach</li>-->
-  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">Zero-knowledge type-checker</a> with Stefan Lorenz, Kim Pecina and Thorsten Tarrach</li>
+  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">Zero-knowledge type-checker</a> (with Stefan Lorenz, Kim Pecina and Thorsten Tarrach)</li>
 </ul>
 
 <h2>Misc</h2>
