--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   <li style="margin-bottom: 1ex;"><a href="https://github.com/zoep">Zoe Paraskevopoulou</a>
   <ul>
     <li style="margin-top: 1ex;">Internship at Inria, 2014-04 to 2014-09:<br/>
-      QuickChick: Formally Certified Property-Based Testing
+      QuickChick: A Coq Framework For Verified Property-Based Testing
     </li>
   </ul>
   </li>
