--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   <li style="margin-bottom: 1ex;"><a href="https://github.com/nickgian">Nick Giannarakis</a>
   <ul>
     <li style="margin-top: 1ex;">Internship at Inria, 2014-04 to 2014-09:<br/>
-      Formally Verified Micro-Policy for <!--Stack Protection and--> Control Flow Integrity
+      Formally Verified Tag-Based Enforcement of Control Flow Integrity
     </li>
   </ul>
   </li>
