--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
   <ul>
     <li style="margin-top: 1ex;">Internship at Inria, 2014-03 to 2014-08:<br/>
-      <a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micropolicies-draft.pdf>"Micro-Policies: Formally Verified, Hardware-Assisted Security Monitors</a>
+      <a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micropolicies-draft.pdf">Micro-Policies: Formally Verified, Hardware-Assisted Security Monitors</a>
     </li>
   </ul>
   </li>
