--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
   <ul>
     <li style="margin-top: 1ex;">Internship at Inria, 2014-03 to 2014-08:<br/>
-      <a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micropolicies-draft.pdf">Micro-Policies: Formally Verified, Hardware-Assisted Security Monitors</a>
+      <a href="publications/micropolicies-draft.pdf">Micro-Policies: Formally Verified, Hardware-Assisted Security Monitors</a>
     </li>
   </ul>
   </li>
@@ -373,7 +373,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   <li style="margin-bottom: 1ex;"><a href="https://github.com/zoep">Zoe Paraskevopoulou</a>
   <ul>
     <li style="margin-top: 1ex;">Internship at Inria, 2014-04 to 2014-09:<br/>
-      QuickChick: A Coq Framework For Verified Property-Based Testing
+      <a href="publications/verified-testing-draft.pdf">QuickChick: A Coq Framework For Verified Property-Based Testing</a> (<a href="http://artemis-new.cslab.ece.ntua.gr:8080/jspui/bitstream/123456789/7104/1/DT2014-0240.pdf">thesis</a>)
     </li>
   </ul>
   </li>
@@ -381,7 +381,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   <li style="margin-bottom: 1ex;"><a href="https://github.com/nickgian">Nick Giannarakis</a>
   <ul>
     <li style="margin-top: 1ex;">Internship at Inria, 2014-04 to 2014-09:<br/>
-      Formally Verified Tag-Based Enforcement of Control Flow Integrity
+      <a href="publications/micropolicies-draft.pdf">Formally Verified Tag-Based Enforcement of Control Flow Integrity</a> (<a href="http://artemis-new.cslab.ece.ntua.gr:8080/jspui/bitstream/123456789/7107/1/DT2014-0243.pdf">thesis</a>)
     </li>
   </ul>
   </li>
