--- a/index.html
+++ b/index.html
@@ -247,6 +247,12 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><em>A Coq Framework For Verified Property Based Testing</em>
+    <ul style="font-size: small">
+      <li><a href="https://www.lri.fr/~conchon/LTP2014/">GT LTP of GDR GPL</a>: <a href="talks/QuickChick-LTP-GPL.pdf">slides</a>, <a href="https://github.com/QuickChick/QuickChick/tree/master/examples/RedBlack">code</a> (2014-10-20)</li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>QuickChick: Property-based testing for Coq</em>
 <!-- QuickChick: Speeding up Formal Proofs with Property-Based Testing -->
     <ul style="font-size: small">
