--- a/index.html
+++ b/index.html
@@ -168,6 +168,24 @@ MPRI website</a>.</p>
 (also on <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a> and <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;">
+    Udit Dhawan,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Nikos Vasilakis,
+    Raphael Rubin,
+    Silviu Chiricescu,
+    Jonathan M. Smith,
+    Thomas F. Knight, Jr.,
+    Benjamin C. Pierce,
+    and André DeHon.
+    <b><a href="http://ic.ese.upenn.edu/abstracts/sdmp_asplos2015.html">
+        Architectural Support for Software-Defined Metadata Processing</a></b>.
+    <a href="http://asplos15.bilkent.edu.tr/">20th International Conference on
+      Architectural Support for Programming Languages and Operating Systems (ASPLOS 2015),
+      Preliminary Draft, October 2013.
+      <!--(March 14--18, 2015)-->
+  </li>
+
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu,
     Leonidas Lampropoulos,
     Antal Spector-Zabusky,
