--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ MPRI website</a>.</p>
     <b><a href="http://ic.ese.upenn.edu/abstracts/sdmp_asplos2015.html">
         Architectural Support for Software-Defined Metadata Processing</a></b>.
     <a href="http://asplos15.bilkent.edu.tr/">20th International Conference on
-      Architectural Support for Programming Languages and Operating Systems (ASPLOS 2015),
+      Architectural Support for Programming Languages and Operating Systems (ASPLOS 2015)</a>,
       Preliminary Draft, October 2013.
       <!--(March 14--18, 2015)-->
   </li>
