--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ MPRI website</a>.</p>
         Architectural Support for Software-Defined Metadata Processing</a></b>.
     <a href="http://asplos15.bilkent.edu.tr/">20th International Conference on
       Architectural Support for Programming Languages and Operating Systems (ASPLOS 2015)</a>,
-      Preliminary Draft, October 2013.
+      March 2015, Preliminary Draft, October 2014.
       <!--(March 14--18, 2015)-->
   </li>
 
