--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@ MPRI website</a>.</p>
     <b><a href="http://ic.ese.upenn.edu/abstracts/sdmp_asplos2015.html">
         Architectural Support for Software-Defined Metadata Processing</a></b>.
     <a href="http://asplos15.bilkent.edu.tr/">20th International Conference on
-      Architectural Support for Programming Languages and Operating Systems (ASPLOS 2015)</a>,
-      March 2015, Preliminary Draft, October 2014.
-      <!--(March 14--18, 2015)-->
+      To appear in Architectural Support for Programming Languages
+      and Operating Systems (ASPLOS 2015)</a>,
+      March 2015. (Preliminary Draft, October 2014).
   </li>
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu,
