--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@ MPRI website</a>.</p>
     and André DeHon.
     <b><a href="http://ic.ese.upenn.edu/abstracts/sdmp_asplos2015.html">
         Architectural Support for Software-Defined Metadata Processing</a></b>.
-    <a href="http://asplos15.bilkent.edu.tr/">20th International Conference on
-      To appear in Architectural Support for Programming Languages
+    To appear in <a href="http://asplos15.bilkent.edu.tr/">
+      20th International Conference on Architectural Support for Programming Languages
       and Operating Systems (ASPLOS 2015)</a>,
       March 2015. (Preliminary Draft, October 2014).
   </li>
