--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ internships, MSc and PhD theses, etc. Here are some potential topics:
   </ul>
 -->
   </li>
-  <li style="margin-bottom: 1ex;"><a href="students/topics/2014/micro-policies.html">Micro-Policies: Formally Verified, Hardware-Assisted Security Monitors</a>
+  <li style="margin-bottom: 1ex;"><a href="students/topics/2014/micro-policies.html">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a>
   (<a href="students/topics/2014/micro-policies.pdf">PDF</a>)</li>
   <li><a href="https://github.com/FStarLang/FStar">NewF*: Next Generation Security Type System</a>
   <ul>
@@ -169,6 +169,19 @@ MPRI website</a>.</p>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Arthur Azevedo de Amorim,
+    Maxime Dénès,
+    Nick Giannarakis,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Benjamin C. Pierce,
+    Antal Spector-Zabusky,
+    Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micropolicies-draft.pdf">Micro-Policies: A Framework for Verified, Tag-Based Security Monitors</a></b>. Submitted. November 2014.
+  <ul style="font-size: small">
+    <li><a href="https://github.com/micro-policies/micro-policies-coq">Coq proofs</a></li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Udit Dhawan,
     C&#259;t&#259;lin Hri&#355;cu,
     Nikos Vasilakis,
@@ -194,19 +207,6 @@ MPRI website</a>.</p>
     John Hughes,
     Benjamin C. Pierce, and
     Dimitrios Vytiniotis. <b><a href="http://arxiv.org/abs/1409.0393">Testing Noninterference, Quickly</a></b>. <a href="http://arxiv.org/abs/1409.0393">arXiv:1409.0393</a>. Submitted to Special Issue of Journal of Functional Programming for ICFP 2013. September 2014.
-  </li>
-
-  <li style="margin-bottom: 1ex;">
-    Arthur Azevedo de Amorim,
-    Maxime Dénès,
-    Nick Giannarakis,
-    C&#259;t&#259;lin Hri&#355;cu,
-    Benjamin C. Pierce,
-    Antal Spector-Zabusky,
-    Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micropolicies-draft.pdf">Micro-Policies: A Framework for Verified, Hardware-Assisted Security Monitors</a></b>. Submitted. July 2014.
-  <ul style="font-size: small">
-    <li><a href="https://github.com/micro-policies/micro-policies-coq">Coq proofs</a></li>
-  </ul>
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -280,7 +280,7 @@ MPRI website</a>.</p>
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><em>Micro-Policies: A Framework for Verified, Hardware-Assisted Security Monitors</em>
+  <li style="margin-bottom: 1ex;"><em>Micro-Policies: A Framework for Verified, Tag-Based Security Monitors</em>
     <ul style="font-size: small">
       <li><a href="http://www.easychair.org/smart-program/VSL2014/FCSFCC-program.html#talk:2906">Joint Workshop on Foundations of Computer Security and Formal and Computational Cryptography (FCS-FCC)</a>: <a href="talks/Micro-Policies-FCS.pdf">slides</a> (2014-07-18)</li>
       <li><a href="http://csl.cs.uni-saarland.de/grsrd/2014/">Grande Region Security and Reliability Day</a> in Saarbrücken: <a href="talks/Micro-Policies-GRSRD.pdf">slides</a> (2014-03-12)</li>
@@ -344,8 +344,8 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.infsec.cs.uni-saarland.de/teaching/SS09/PracticalSecurity/">Practical Aspects of Security Lecture</a></b>
-    - Advanced Lecture, Saarland University, Summer 2009
+  <li style="margin-bottom: 1ex;"><b><a href="http://www.infsec.cs.uni-saarland.de/teaching/SS09/PracticalSecurity/">Practical Aspects of Security</a></b>
+    - Advanced Lecture, Saarland University, Summer 2009<br/>
     (<b>Best lecture award</b>).
     Guest lecturer for 3 lectures:
     <ul style="font-size: small">
@@ -389,7 +389,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
   <ul>
     <li style="margin-top: 1ex;">Internship at Inria, 2014-03 to 2014-08:<br/>
-      <a href="publications/micropolicies-draft.pdf">Micro-Policies: Formally Verified, Hardware-Assisted Security Monitors</a>
+      <a href="publications/micropolicies-draft.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a>
     </li>
   </ul>
   </li>
@@ -455,7 +455,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
 
   <li style="margin-bottom: 1ex;">
     <a href="https://github.com/micro-policies">Micro-Policies:
-      Formally Verified, Hardware-Assisted Security Monitors</a>
+      Formally Verified, Tag-Based Security Monitors</a>
       (with Arthur Azevedo de Amorim, André DeHon, Maxime Dénès, Udit Dhawan,
        Nick Giannarakis, Benjamin C. Pierce, Antal Spector-Zabusky, and Andrew Tolmach)</li>
 
