--- a/index.html
+++ b/index.html
@@ -89,10 +89,14 @@ internships, MSc and PhD theses, etc. Here are some potential topics:
   </ul>
 -->
   </li>
-  <li style="margin-bottom: 1ex;"><a href="students/topics/2014/micro-policies.html">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a>
-  (<a href="students/topics/2014/micro-policies.pdf">PDF</a>)</li>
-  <li><a href="https://github.com/FStarLang/FStar">NewF*: Next Generation Security Type System</a>
+  <li style="margin-bottom: 1ex;"><a href="students/topics/2015/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a></li>
+  <li><a href="https://github.com/FStarLang/FStar">F*: Next Generation
+      Type-Based Verification System for ML</a>
   <ul>
+  <li><a href="https://github.com/FStarLang/FStar">Code on GitHub</a></li>
+  <li><a href="http://prosecco.gforge.inria.fr/tutorial.html">New F* tutorial</a>
+  (<a href="https://wiki.inria.fr/prosecco/F*_Materials_-_Joint_School_2014">more
+    materials from recent "summer" school</a>)</li>
   <li><a href="https://research.microsoft.com/en-us/projects/fstar/">You can read more about old F* here</a></li>
   </ul></li>
 </ul>
