--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ I am looking for talented, highly motivated students, for research
 internships, MSc and PhD theses, etc. Here are some potential topics:
 <!--(but there are many other possible ones):--></p>
 <ul>
-  <li style="margin-bottom: 1ex;"><a href="students/topics/2015/quick-chick.pdf"> QuickChick: Speeding up Formal Proofs with Property-Based Testing</a>
+  <li style="margin-bottom: 1ex;"><a href="students/topics/2015/quick-chick.pdf">QuickChick: Property-Based Testing for Coq</a>
 <!--
   <ul>
   <li><a href="https://www.inria.fr/en/institute/recruitment/offers/phd/campaign-2014/(view)/details.html?id=PNGFK026203F3VBQB6G68LOE1&LOV5=4509&LG=EN&Resultsperpage=20&nPostingID=8363&nPostingTargetID=14104&option=52&sort=DESC&nDepartmentID=28"><strong>You can apply for an Inria-funded PhD fellowship on this topic!</strong></a></li>
