--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ I am looking for talented, highly motivated students, for research
 internships, MSc and PhD theses, etc. Here are some potential topics:
 <!--(but there are many other possible ones):--></p>
 <ul>
-  <li><a href="https://github.com/FStarLang/FStar">F*: Next Generation
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/FStarLang/FStar">F*: Next Generation
       Type-Based Verification System for ML</a>
   <ul>
   <li><a href="https://github.com/FStarLang/FStar">Code on GitHub</a></li>
